--- a/style.css
+++ b/style.css
@@ -29,3 +29,24 @@ body {
 #bookmarks-home {
     text-align: center;
 }
+
+.link-shadow {
+    box-shadow: 5px 5px 15px 5px rgba(245, 5, 253, 0.63);
+    text-align: center;
+    height: 80px;
+    padding: 23px;
+    margin: 23px auto;
+}
+
+.link-shadow .img-btn:hover {
+    /* box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.63); */
+    cursor: pointer;
+}
+
+.link-shadow:active {
+    box-shadow: 5px 5px 15px 5px green;
+}
+
+.img-btn {
+    width: 75px;
+}
