--- a/style.css
+++ b/style.css
@@ -1,16 +1,14 @@
-/* <!-- Fonts for whole website --> */
-@import url('https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&display=swap');
-
-* {
-    font-family: "Kode Mono", monospace;
-}
-
-/* Background Image */
-body {
-    background-color: black;
-    color: purple;
-}
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+/* media query (more responsive website */
+@media only screen and (max-width: 566px)
+{
+    .list{
+        flex-direction: column;
+        justify-content: center;
+        text-align: center
+    }
+}
 
 :root {
     /* First Color Palette */
@@ -82,7 +80,7 @@ body {
 .menu-opt {
     background-color: var(--secondary-color);
     border: 2px solid var(--primary-color);
-    padding: 5px;
+    padding: 15px;
     margin: 15px;
     font-weight: bolder;
     border-radius: 7px;
@@ -176,3 +174,5 @@ body {
     list-style: none;
     padding-inline: 40px;
 }
+
+
