--- a/style.css
+++ b/style.css
@@ -1,178 +1,68 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
-/* media query (more responsive website */
-@media only screen and (max-width: 566px)
-{
-    .list{
-        flex-direction: column;
-        justify-content: center;
-        text-align: center
-    }
-}
-
-:root {
-    /* First Color Palette */
-    --navBar:
-        #31263E;
-    --secondary-color:
-        #221E22;
-    --primary-color:
-        #44355B;
-    --hoverShadowColor:
-        #ECA72C;
-    --activeShadowColor:
-        #EE5622;
-
-    /* First Color Palette */
-    /* --navBar:
-        #595959;
-    --secondary-color:
-        #CECFC7;
-    --primary-color:
-        #ADA8B6;
-    --hoverShadowColor:
-        #23022E;
-    --activeShadowColor:
-        #573280; */
-}
-
-.main {
-    font-weight: bolder;
-    text-align: center;
-    color: var(--secondary-color);
-    text-shadow: 2px 2px 4px var(--secondary-color);
-}
-
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Poppins', sans-serif;
+}
+
+:root {
+    --primary-clr: #FFC04E;
+    --font-clr: #fff;
 }
 
 body {
-    color: white;
-    background-color: var(--primary-color);
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+    /* Background gradient colors */
+    background: linear-gradient(to right, #800080, #C21170, #ED4C5C, #FF864C, #FFC04E, #F9F871);
 }
 
-
-/* nav */
 .menu {
-    background-color: var(--navBar);
-    /* padding: 12px 0; */
-    margin: 5px;
-    border: 2px solid var(--secondary-color);
-    border-radius: 7px;
+    /* Nav bar background gradient color */
+    background: linear-gradient(to right, #800080, #C21170, #ED4C5C, #FF864C, #FFC04E, #F9F871);
+
+    filter: drop-shadow(0 0 20px black);
+    border-radius: 10px;
+    height: 3rem;
+    width: 80vw;
+    margin: 10px auto;
 }
 
-/* ul */
-.list {
+.menu .list {
     list-style: none;
     display: flex;
+    justify-content: space-around;
 }
 
-/* link in nav */
-.list li a {
-    color: var(--primary-color);
-    text-decoration: none;
-}
-
-/* li */
 .menu-opt {
-    background-color: var(--secondary-color);
-    border: 2px solid var(--primary-color);
-    padding: 15px;
-    margin: 15px;
-    font-weight: bolder;
-    border-radius: 7px;
+    margin-top: 15px;
+    font-weight: bold;
 }
 
-.menu-opt:hover {
-    box-shadow: 1px 1px 10px 1px var(--primary-color);
-    cursor: pointer;
-}
-
-.menu-opt:active {
-    box-shadow: 1px 1px 10px 1px var(--hoverShadowColor);
-    color: var(--hoverShadowColor);
-}
-
-/* Back to home button */
-.back-btn{
-    background-color: var(--secondary-color);
-    border: 2px solid var(--primary-color);
-    color: var(--primary-color);
+.list a {
     text-decoration: none;
-    padding: 5px;
-    border-radius: 7px;
+    color: var(--font-clr);
+
 }
 
-.back-margin{
-    padding: 10px;
+.back-btn{
+    text-decoration: none;
+    color: #fff;
 }
 
-.back-btn:hover {
-    box-shadow: 1px 1px 10px 1px black;
-    cursor: pointer;
-}
-
-.back-btn:active {
-    box-shadow: 1px 1px 10px 1px var(--hoverShadowColor);
-    color: var(--hoverShadowColor);
-}
-#site-name{
-    text-shadow: 2px 2px 4px purple;
-}
-
-
-.center-text {
+.back-box{
     text-align: center;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: large;
+
+    margin-top: 10px;
 }
 
-/* .box {
-    font-weight: bolder;
-} */
+@media screen and (max-device-width: 480px) and (orientation: portrait) {
+    .menu .list {
+        flex-direction: column;
+        align-items: center;
+    }
 
-.box2 {
-    font-weight: bolder;
-    text-align: center;
-    color: purple;
-    text-shadow: 2px 2px 4px purple;
+    .menu {
+        height: 9.1rem;
+    }
 }
-
-#bookmarks-home {
-    text-align: center;
-}
-
-.link-shadow {
-    box-shadow: 5px 5px 15px 5px rgba(245, 5, 253, 0.63);
-    text-align: center;
-    width: 80px;
-    padding: 23px;
-    margin: 23px auto;
-}
-
-.link-shadow:hover {
-    box-shadow: 5px 5px 15px 5px blueviolet;
-    cursor: pointer;
-}
-
-.link-shadow:active {
-    box-shadow: 5px 5px 15px 5px blue;
-}
-
-/* .img-btn {
-
-    width: 75px;
-    margin: auto;
-} */
-
-.menu{
-    display: flex;
-}
-
-.menu-opt{
-    list-style: none;
-    padding-inline: 40px;
-}
-
-
